src/objects/Position__c.object
<CustomObject>
    <description>This object stores information about the open job positions at our company.</description>
    <fields>
        <fullName>Apex__c</fullName>
        <defaultValue>false</defaultValue>
        <description>cheked-Key skill known
unchecked- kill skill not known</description>
        <inlineHelpText>cheked-Key skill known
unchecked- kill skill not known</inlineHelpText>
        <label>Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>Date of approval</description>
        <inlineHelpText>Date of approval</inlineHelpText>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Associat_Min_Pay__c</fullName>
        <description>Associate should have MIN Pay $1500</description>
        <formula>IF(  CONTAINS( Name , &quot;Associate&quot;) , IF( Min_Pay__c   &lt;=  1500, 1500,  Min_Pay__c ),  Min_Pay__c )</formula>
        <inlineHelpText>Associate should have MIN Pay $1500</inlineHelpText>
        <label>Associat_Min_Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ButtonClicked__c</fullName>
        <description>Button Cliked</description>
        <inlineHelpText>Button Cliked</inlineHelpText>
        <label>ButtonClicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>C_Hash__c</fullName>
        <defaultValue>false</defaultValue>
        <description>cheked-Key skill known
unchecked- kill skill not known</description>
        <inlineHelpText>cheked-Key skill known
unchecked- kill skill not known</inlineHelpText>
        <label>C#</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>The position will be closed on this date at 23:59 PM midnight</description>
        <inlineHelpText>The position will be closed on this date at 23:59 PM midnight</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysOpen__c</fullName>
        <description>The number of days a position has been (or was) open.</description>
        <formula>IF( ISBLANK( Close_Date__c ) , 
                
                    TODAY()  - Open_Date__c ,  Close_Date__c - Open_Date__c )</formula>
        <inlineHelpText>The number of days a position has been (or was) open.</inlineHelpText>
        <label>Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Educational_Requirements__c</fullName>
        <description>Describes the educational criterion for the eligibility of this post.</description>
        <inlineHelpText>Describes the educational criterion for the eligibility of this post.</inlineHelpText>
        <label>Educational Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <description>Shows the functional area to which the position belong</description>
        <inlineHelpText>Shows the functional area to which the position belong</inlineHelpText>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehousing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hire_By__c</fullName>
        <defaultValue>TODAY()  + 90</defaultValue>
        <description>Hire by this date</description>
        <inlineHelpText>Hire by this date</inlineHelpText>
        <label>Hire By</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hiring_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Hiring Manager</description>
        <inlineHelpText>Hiring Manager</inlineHelpText>
        <label>Hiring Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Positions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JavaScript__c</fullName>
        <defaultValue>false</defaultValue>
        <description>cheked-Key skill known
unchecked- kill skill not known</description>
        <inlineHelpText>cheked-Key skill known
unchecked- kill skill not known</inlineHelpText>
        <label>JavaScript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Java__c</fullName>
        <defaultValue>false</defaultValue>
        <description>cheked-Key skill known
unchecked- kill skill not known</description>
        <inlineHelpText>cheked-Key skill known
unchecked- kill skill not known</inlineHelpText>
        <label>Java</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <description>High-level description of the job and its duties</description>
        <inlineHelpText>High-level description of the job and its duties</inlineHelpText>
        <label>Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Level__c</fullName>
        <description>Describes the respective job level</description>
        <inlineHelpText>Describes the respective job level</inlineHelpText>
        <label>Job Level</label>
        <picklist>
            <controllingField>Functional_Area__c</controllingField>
            <picklistValues>
                <fullName>FN-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FN-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MC-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO-400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-300</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WH-400</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>A picklist that shows the locations of the company</description>
        <inlineHelpText>A picklist that shows the locations of the company</inlineHelpText>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco, CA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Austin, TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boulder, CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London, England</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York, NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai, India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney, Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tokyo, Japan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Pay__c</fullName>
        <description>Shows the maximum pay scale offered for this position</description>
        <inlineHelpText>Shows the maximum pay scale offered for this position</inlineHelpText>
        <label>Max Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Min_Pay__c</fullName>
        <description>Shows the minimum pay scale offered for this position</description>
        <inlineHelpText>Shows the minimum pay scale offered for this position</inlineHelpText>
        <label>Min Pay</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <description>From this date a job is open to apply for applicants</description>
        <inlineHelpText>From this date a job is open to apply for applicants</inlineHelpText>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Responsibilities__c</fullName>
        <description>Defines the responsibilities of the corresponding position title</description>
        <inlineHelpText>Defines the responsibilities of the corresponding position title</inlineHelpText>
        <label>Responsibilities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skills_Required__c</fullName>
        <description>Defines the skills that are required for this position title</description>
        <inlineHelpText>Defines the skills that are required for this position title</inlineHelpText>
        <label>Skills Required</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Shows the current status of the position</description>
        <inlineHelpText>Shows the current status of the position</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New Position No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed - Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_between_button_clicked_and_firstAct__c</fullName>
        <formula>(first_activity_date__c  -  Approved_Date__c)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time between button clicked and firstAct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines whether traveling is required or not for this position</description>
        <inlineHelpText>Defines whether traveling is required or not for this position</inlineHelpText>
        <label>Travel Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Shows the job-type for the position</description>
        <inlineHelpText>Shows the job-type for the position</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>first_activity_date__c</fullName>
        <description>first_activity_date(tasks only)</description>
        <inlineHelpText>first_activity_date(tasks only)</inlineHelpText>
        <label>first activity date</label>
        <type>DateTime</type>
    </fields>
    <label>Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Position_Queue_Position</fullName>
        <filterScope>Queue</filterScope>
        <label>Position_Queue</label>
        <queue>Position_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unclaimed_Positions_Queue_Position</fullName>
        <filterScope>Queue</filterScope>
        <label>Unclaimed Positions Queue</label>
        <queue>Unclaimed_Positions_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Position  Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Positions</pluralLabel>
    <recordTypes>
        <fullName>IT_Position</fullName>
        <active>true</active>
        <description>Record type for all IT positions</description>
        <label>IT Position</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Position</fullName>
        <active>true</active>
        <description>Record type for all non-IT positions</description>
        <label>Standard Position</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Close_Date_Rule</fullName>
        <active>true</active>
        <description>Close Date must be specified when Status is set to &apos;Closed - Filled&apos; or &apos;Closed - Not Approved.&apos;</description>
        <errorConditionFormula>ISBLANK( Close_Date__c ) &amp;&amp; (  ISPICKVAL( Status__c , &quot;Closed - Filled&quot;) || ISPICKVAL( Status__c , &quot;Closed - Not Approved&quot;) )</errorConditionFormula>
        <errorDisplayField>Close_Date__c</errorDisplayField>
        <errorMessage>Close Date must be specified when Status is set to &apos;Closed.&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Max_Pay_Cannot_be_Empty</fullName>
        <active>true</active>
        <description>Maximum  pay cannot be empty</description>
        <errorConditionFormula>ISBLANK( Max_Pay__c )</errorConditionFormula>
        <errorDisplayField>Max_Pay__c</errorDisplayField>
        <errorMessage>Please Enter a Maximum Pay Scale for this position</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Associate_Rule</fullName>
        <active>true</active>
        <description>Min pay for associate should be $1500</description>
        <errorConditionFormula>AND(Associat_Min_Pay__c   &gt;=  1500, Min_Pay__c  &lt; 1500)</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>Its an associate, Min_Pay should be $1500</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_Pay_Rule</fullName>
        <active>true</active>
        <description>Min Pay should never exceed Max Pay</description>
        <errorConditionFormula>Min_Pay__c &gt;  Max_Pay__c</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>Min Pay cannot exceed Max Pay</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Min_pay_cannot_be_blanked</fullName>
        <active>true</active>
        <description>Please enter the basic minimum pay</description>
        <errorConditionFormula>ISBLANK( Min_Pay__c )</errorConditionFormula>
        <errorDisplayField>Min_Pay__c</errorDisplayField>
        <errorMessage>Minimum Pay Cannot be Empty</errorMessage>
    </validationRules>
</CustomObject>